--- a/index.html
+++ b/index.html
@@ -2,39 +2,56 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!--Bootstrap Link-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
-<script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=RbGG2RCBQtq_be56v3-L6KjhiTPYCVyE_apz2wCY5NnqSuFvah6fDEOHitxxPhwTNDgGroJ0C4PuyqgkF0vrdcrO-5D7ljQydsnefyMihxtro1vtv2BGEAneJsgvEzlrl_78RKQDwTAuoF8U7qO7URpqDzVvqhXXTDV75I8h817A3M5oqv7_oit6QLHaKOTeH3_sn1uvwIyngKvYZtyAN0JO7Bl5wcV4fh-C-MJ0gA0c8kQC3C2k0RZOAe5JGl6xldNh__sfxiAXX1faHdADJPD2IjyYMJ2dekH9xT-Db2QKaEEpw1iwcDSDgiZheT7BOZbHJfUZ5acgIHoBuT3DMg" charset="UTF-8"></script></head>
+  <title>Book Archive</title>
+</head>
 
 <body>
-    <!--Script link-->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <!--Search Area-->
-    <h2 class="text-center">Search your book</h2>
-    <div class="input-group mb-3 w-50 mx-auto">
-        <input id="search-field" type="text" class="form-control" placeholder="Search Your Book"
-            aria-label="Recipient's username" aria-describedby="basic-addon2">
-       
-        <button onclick="searchBook()" id="search-button">Search</button>
-    </div>
-    <!-- error  -->
-    <div id="error" class="d-none">
-        <div class="alert alert-danger" role="alert">
-            No Reasult Found
-        </div>
-    </div>
-    <div id="search-result" class="row row-cols-1 row-cols-md-2 g-4">
-    </div>
 
-    <script src="book.js"></script>
+
+  <!-- input area -->
+  <div class="input-group  w-75 mx-auto my-5">
+    <input id="input-field" type="text" class="form-control" placeholder="Search your Books"
+      aria-label="Recipient's username" aria-describedby="button-addon2">
+
+    <!-- search button -->
+    <button onclick="loadBookData()" class="btn btn-outline-secondary" type="button">Search</button>
+  </div>
+
+  <main>
+    <section class="container overflow-hidden">
+
+      <!-- spinner -->
+      <div class="d-flex justify-content-center">
+        <div id="spinner" class="spinner-border d-none" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
+      </div>
+
+      <!-- result found -->
+      <h4 id="result-found" class="my-5 text-center"></h4>
+
+      <!-- search result -->
+      <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4 mb-5">
+      </div>
+
+    </section>
+  </main>
+
+
+  <!-- bootstrap js -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
+    crossorigin="anonymous"></script>
+
+  <!-- main script -->
+  <script src="book.js"></script>
 </body>
 
 </html>
